syntax = "proto3";

package user_level;
service UserLevel {
    //获取用户等级信息
    rpc GetUserLevelInfo (In_GetUserLevelInfo) returns (Out_GetUserLevelInfo) {
    }
    //修改等级信息
    rpc UpdateUserLevel (In_UpdateUserLevel) returns (Out_UpdateUserLevel) {
    }
    //获取等级列表
    rpc GetUserLevels (In_GetUserLevels) returns (Out_GetUserLevels) {
    }
    //删除等级列表
    rpc DeleteUserLevels (In_DeleteUserLevels) returns (Out_DeleteUserLevels) {
    }
    //新建等级信息
    rpc CreateUserLevel (In_CreateUserLevel) returns (Out_CreateUserLevel) {
    }
}
message Error {
    int32 code = 1;
    string message = 2;
}
//用户等级
message User_level_inf {
   int64 id=1;
   string name=2;
   int64 growth_point=3;
   int64 default_status=4;
   float free_freight_point=5;
   int64 comment_growth_point=6;
   int64 priviledge_free_freight=7;
   int64 priviledge_sign_in=8;
   int64 priviledge_comment=9;
   int64 priviledge_promotion=10;
   int64 priviledge_member_price=11;
   int64 priviledge_birthday=12;
   string note=13;
}

message In_GetUserLevelInfo {
    int64 user_level = 1; //等级ID
    uint64 user_point = 2; //客户积分
}

message Out_GetUserLevelInfo {
    bool success = 1;
    Error error = 2;
    User_level_inf user_level_inf = 3; //等级信息
}

message In_UpdateUserLevel {
    User_level_inf user_level_inf = 1; //等级信息
}

message Out_UpdateUserLevel {
    bool success = 1;
    Error error = 2;
    User_level_inf user_level_inf = 3; //等级信息
}

message In_GetUserLevels {
    int64 limit = 1;
    int64 pages = 2;
    string search_key = 3;
    string start_time = 4;
    string end_time = 5;
}

message Out_GetUserLevels {
    Error error = 1;
    int64 limit = 2;
    int64 pages = 3;
    int64 total = 4;
    repeated User_level_inf user_level_inf_list = 5;
}

message In_DeleteUserLevels {
    repeated int64 user_levels = 1;
}
message Out_DeleteUserLevels {
    Error error = 1;
}


message In_CreateUserLevel {
    User_level_inf user_level = 1;
}
message Out_CreateUserLevel {
    Error error = 1;
    User_level_inf user_level_inf = 2; //等级信息
}


